tests/lean/setLit.lean.expected.out
setLit.lean:22:19-22:21: error: overloaded, errors 
  failed to synthesize instance of type class
    EmptyCollection String
  
  Hint: Type class instance resolution failures can be inspected with the `set_option trace.Meta.synthInstance true` command.
  
  Fields missing: `toByteArray`, `isValidUTF8`
  
  Hint: Add missing fields:
     ̲t̲o̲B̲y̲t̲e̲A̲r̲r̲a̲y̲ ̲:̲=̲ ̲_̲
    ̲ ̲ ̲ ̲ ̲ ̲ ̲ ̲ ̲ ̲ ̲ ̲ ̲ ̲ ̲ ̲ ̲ ̲ ̲ ̲ ̲ ̲i̲s̲V̲a̲l̲i̲d̲U̲T̲F̲8̲ ̲:̲=̲ ̲_̲ ̲
setLit.lean:24:31-24:38: error: overloaded, errors 
  failed to synthesize instance of type class
    Singleton Nat String
  
  Hint: Type class instance resolution failures can be inspected with the `set_option trace.Meta.synthInstance true` command.
  
  24:33 `val` is not a field of structure `String`
